--- a/css/catalog.css
+++ b/css/catalog.css
@@ -657,7 +657,7 @@
 		
 		/*楼中楼回复*/
     .index .CommentArea  .Publish {
-      width: 630px;
+      width: 640px;
       height: 90px;
       margin-left:120px ;
     }
@@ -666,6 +666,11 @@
       float: left;
       padding-top: 4px;
     }
+        .index .CommentArea  .Publish .user_head a img{
+          width: 64px;
+          height: 64px;
+          border-radius: 32px;
+        }
     .index .CommentArea  .Publish li {
       float: left;
     }
@@ -780,7 +785,7 @@
 			border-bottom: 1px solid #00A1D6;
 		}
 		.index .CommentArea {
-		  width: 678px;
+		  width: 680px;
 		 
 		}
 		.index .CommentArea .hr {
@@ -822,6 +827,9 @@
 		 	position: relative;
 		 	top: 5px;
 		 left: 15px;
+		     width: 54px;
+    height: 54px;
+    border-radius: 32px;
 		 }
 		.index .text_user .mes_head {
 		 	width: 583px;
@@ -1153,4 +1161,50 @@
 		}
 		.btn:active {
 			box-shadow: inset 3px 3px 5px 1px rgba(0,0,0,0.7);
+		}
+		.Report {
+		  width: 220px;
+		  height: 240px;
+		  background-color: white;   
+		   box-shadow: 0 3px 5px rgba(0,0,0,.3);
+		   border-radius: 6px;
+		}
+		.Report form {
+		  width: 220px;
+      height: 180px;
+      padding-top: 20px;
+      font-weight: 600;
+      padding-left: 20px;
+    
+		}
+		.Report form label {
+      font-weight: 100;
+      cursor: pointer;
+		}
+		.Report ul {
+		  width: 220px;
+      height: 150px;
+      float: left;
+		}
+		.Report ul li {
+		  width: 110px;
+		  float: right;
+		  margin-top: 15px;
+		  
+		}
+		.Report .true {
+		  width: 75px;
+		  height: 30px;
+		  text-align: center;
+		  line-height: 15px;
+		  font-weight: 100;
+		  color: white;
+		  background-color: #3DB2D8;
+		  border-radius: 6px;
+		  margin-top: 10px;
+		  margin-left:70px ;
+		  cursor: pointer;
+		}
+		.Report .true:hover {
+		  background-color: #00A1D6;
 		}
