--- a/css/user_info.css
+++ b/css/user_info.css
@@ -1409,9 +1409,13 @@
   
 } 
 .attention_AI_name {
-  height: 30px;
-  line-height: 30px;
-  
+  text-overflow: ellipsis;
+  line-height: 1.3;
+  width: 629px;
+  margin-left: 120px;
+  min-height: 30px;
+  max-height: 75px;
+  overflow: hidden;
 }
 .attention_AI_name span {
   color: #00A1D6;
