--- a/view/catalog.html
+++ b/view/catalog.html
@@ -165,7 +165,26 @@
   </ul>
   <div class="hr"></div>  
 </div>
-        
+   
+
+<div class="Report">
+    <form action="" method="get"> 
+        请输入举报理由
+    <br /><br /> 
+    <ul>
+       <li><label><input name="Fruit" type="radio" value="" />&nbsp广告 </label> </li>
+    <li><label><input name="Fruit" type="radio" value="" />&nbsp刷屏 </label>  </li>
+    <li><label><input name="Fruit" type="radio" value="" />&nbsp剧透 </label>  </li>
+    <li><label><input name="Fruit" type="radio" value="" />&nbsp引战</label>  </li>
+    <li><label><input name="Fruit" type="radio" value="" />&nbsp政治</label>  </li>
+    <li> <label><input name="Fruit" type="radio" value="" />&nbsp内容不相关</label>  </li>
+    <li><label><input name="Fruit" type="radio" value="" />&nbsp人身攻击</label>  </li>
+    <li><label><input name="Fruit" type="radio" value="" />&nbsp其他</label>  </li>
+    </ul>
+</form> 
+<div class="true">确定</div>
+</div>
+
 
 <div id="page" class="page">
   <ul>
